fix: fix overflow issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  position: relative;
   margin: auto;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
